--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,16 @@ Dark green: #28b485
 
 */
 
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
 body {
-  background: #28b485;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.7;
+  color: #777;
 }
